gcc/testsuite/rust/rustc/ui/keyword/keyword-self-as-identifier.rs
fn main() {
    let Self = 22; // { dg-error ".E0531." "" { target *-*-* } }
}

